# Centro-estetico-API

./: .env.example  .gitignore  README.md  beauty_api.sql  main.py  package-lock.json  pyproject.toml  requirements.txt
Knowledge/: Plantilla_Reporte.docx  talispa-er-negocio.mmd
app/: crud.py  database.py
app/models/: schemas.py
app/routers/: auth.py  citas.py  clientes.py  estilistas.py  historial.py  notificaciones.py  servicios.py  usuarios.py
